--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "qrcode": "^1.5.3",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0"
   }
